# NovacRatioTest

./: .gitignore  CMakeLists.txt  README.md
ConfigurationFiles/: D2J2200.exml  D2J2201.exml  ReadMe.txt  processing.xml  setup.xml
ConfigurationFiles/Masaya/: D2J2124.exml  processing.xml  setup.xml
ConfigurationFiles/Masaya/References/: D2J2124_0_O3_20160321_1746.txt  D2J2124_0_RING_20160321_1746.txt  D2J2124_0_SO2_20160321_1746.txt  D2J2124_SO2.nfw  cfg_D2J2124.txt  ineter_20160321_1746_conf.xml
ConfigurationFiles/NevadoDelRuiz/: processing.xml
ConfigurationFiles/NevadoDelRuiz/References/: D2J2200_Master_O3_223K.txt  D2J2200_Master_solarspec.txt  D2J2200_Slave_BrO.txt  D2J2200_Slave_Ring_HR.txt  D2J2201_Master_BrO.txt  D2J2201_Master_O3_223K.txt  D2J2201_Master_SO2_294K.txt  D2J2201_Slave_O3_223K.txt  D2J2201_Slave_Ring_HR.txt  D2J2201_Slave_solarspec.txt
ConfigurationFiles/References/: D2J2200_Master_BrO.txt  D2J2200_Master_Ring_HR.txt  D2J2200_Master_SO2.nfw  D2J2200_Master_SO2_294K.txt  D2J2200_Slave_O3_223K.txt  D2J2200_Slave_SO2_294K.txt  D2J2200_Slave_solarspec.txt  D2J2201_Master_Ring_HR.txt  D2J2201_Master_SO2.nfw  D2J2201_Master_solarspec.txt  D2J2201_Slave_BrO.txt  D2J2201_Slave_SO2_294K.txt
Data/2012.06.30/: D2J2201_120609_1455_0.pak  D2J2201_120609_1455_0.txt  D2J2201_120609_1459_0.pak  D2J2201_120609_1459_0.txt  D2J2201_120609_1503_0.pak  D2J2201_120609_1503_0.txt  D2J2201_120609_1507_0.pak  D2J2201_120609_1507_0.txt  D2J2201_120609_1511_0.pak  D2J2201_120609_1511_0.txt  D2J2201_120609_1517_0.pak  D2J2201_120609_1517_0.txt  D2J2201_120609_1521_0.pak  D2J2201_120609_1521_0.txt  D2J2201_120609_1527_0.pak  D2J2201_120609_1527_0.txt  D2J2201_120609_1531_0.pak  D2J2201_120609_1531_0.txt  D2J2201_120610_0057_0.pak  D2J2201_120610_0057_0.txt  D2J2201_120610_0113_0.pak  D2J2201_120610_0113_0.txt  D2J2201_120610_0130_0.pak  D2J2201_120610_0130_0.txt  D2J2201_120610_0147_0.pak  D2J2201_120610_0147_0.txt  D2J2201_120610_0203_0.pak  D2J2201_120610_0203_0.txt  D2J2201_120622_1152_0.pak  D2J2201_120622_1152_0.txt  D2J2201_120622_1202_0.pak  D2J2201_120622_1202_0.txt  D2J2201_120622_1211_0.pak  D2J2201_120622_1211_0.txt  D2J2201_120622_1220_0.pak  D2J2201_120622_1220_0.txt  D2J2201_120622_1228_0.pak  D2J2201_120622_1228_0.txt  D2J2201_120622_1236_0.pak  D2J2201_120622_1236_0.txt  (+126 more)
Data/Masaya/2016.04.03/: D2J2124_160331_1317_0.pak  D2J2124_160331_1317_0.txt  D2J2124_160331_1334_0.pak  D2J2124_160331_1334_0.txt  D2J2124_160331_1344_0.pak  D2J2124_160331_1344_0.txt  D2J2124_160331_1400_0.pak  D2J2124_160331_1400_0.txt  D2J2124_160331_1409_0.pak  D2J2124_160331_1409_0.txt  D2J2124_160331_1425_0.pak  D2J2124_160331_1425_0.txt  D2J2124_160331_1439_0.pak  D2J2124_160331_1439_0.txt  D2J2124_160331_1448_0.pak  D2J2124_160331_1448_0.txt  D2J2124_160331_1500_0.pak  D2J2124_160331_1500_0.txt  D2J2124_160331_1519_0.pak  (+136 more)
NovacBroRatios/: CMakeLists.txt  Misc.cpp  Misc.h  Molecule.cpp  Molecule.h  PostProcessing.cpp  PostProcessing.h  SetupFileReader.cpp  SetupFileReader.h  main.cpp  stdafx.h
NovacBroRatios/Common/: CMakeLists.txt  EvaluationConfigurationParser.cpp  EvaluationConfigurationParser.h  EvaluationLogFileHandler.cpp  EvaluationLogFileHandler.h  ProcessingFileReader.cpp  ProcessingFileReader.h  XMLFileReader.cpp  XMLFileReader.h
NovacBroRatios/Configuration/: CMakeLists.txt  DarkCorrectionConfiguration.cpp  DarkCorrectionConfiguration.h  EvaluationConfiguration.cpp  EvaluationConfiguration.h  InstrumentConfiguration.cpp  InstrumentConfiguration.h  InstrumentLocation.cpp  InstrumentLocation.h  LocationConfiguration.cpp  LocationConfiguration.h  NovacPPPConfiguration.cpp  NovacPPPConfiguration.h  UserConfiguration.cpp  UserConfiguration.h
NovacBroRatios/Evaluation/: CMakeLists.txt  ExtendedScanResult.h  PostEvaluationController.cpp  PostEvaluationController.h  ScanEvaluation.cpp  ScanEvaluation.h  ScanResult.cpp  ScanResult.h
PPPLib/src/: CFileUtils.cpp  CFtpUtils.cpp  CStdioFile.cpp  CString.cpp  CStringTokenizer.cpp  VolcanoInfo.cpp
(+15 files in other folders)
